tests/baselines/reference/classExtendsEveryObjectType.errors.txt
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(4,17): error TS2689: Cannot extend an interface 'I'. Did you mean 'implements'?
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(6,18): error TS2507: Type '{ foo: any; }' is not a constructor function type.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(6,25): error TS2693: 'string' only refers to a type, but is being used as a value here.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(6,31): error TS1005: ',' expected.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(8,18): error TS2507: Type '{ foo: string; }' is not a constructor function type.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(11,18): error TS2507: Type 'typeof M' is not a constructor function type.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(14,18): error TS2507: Type '() => void' is not a constructor function type.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(16,18): error TS2507: Type 'undefined[]' is not a constructor function type.


==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts (8 errors) ====
    interface I {
        foo: string;
    }
    class C extends I { } // error
                    ~
!!! error TS2689: Cannot extend an interface 'I'. Did you mean 'implements'?
    
    class C2 extends { foo: string; } { } // error
                     ~~~~~~~~~~~~~~~~
!!! error TS2507: Type '{ foo: any; }' is not a constructor function type.
                            ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
                                  ~
!!! error TS1005: ',' expected.
    var x: { foo: string; }
    class C3 extends x { } // error
                     ~
!!! error TS2507: Type '{ foo: string; }' is not a constructor function type.
    
    module M { export var x = 1; }
    class C4 extends M { } // error
                     ~
!!! error TS2507: Type 'typeof M' is not a constructor function type.
    
    function foo() { }
    class C5 extends foo { } // error
                     ~~~
!!! error TS2507: Type '() => void' is not a constructor function type.
    
    class C6 extends []{ } // error
                     ~~
!!! error TS2507: Type 'undefined[]' is not a constructor function type.